feat: split delta

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,4 @@
 [core]
-pager = delta
 ignorecase = false
 
 [init]
@@ -8,27 +7,7 @@ defaultBranch = main
 [pull]
 rebase = true
 
-[interactive]
-diffFilter = delta --color-only
-
-[merge]
-conflictstyle = diff3
-
-[delta]
-navigate = true
-dark = true
-line-numbers = true
-side-by-side = true
-
-[gpg]
-format = ssh
-
-[commit]
-gpgsign = true
-
-[tag]
-gpgsign = true
-
 [include]
 path = ~/.config/git/tokyonight_moon.gitconfig
+path = ~/.config/git/delta.gitconfig
 path = ~/.config/git/user.gitconfig
